--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,9 +1,9 @@
-#███████╗███╗░░░███╗░██████╗████████╗░█████╗░███████╗███████╗░██╗░░░░░░░██╗░█████╗░██████╗░██╗░░██╗
-#██╔════╝████╗░████║██╔════╝╚══██╔══╝██╔══██╗██╔════╝██╔════╝░██║░░██╗░░██║██╔══██╗██╔══██╗██║░██╔╝
-#█████╗░░██╔████╔██║╚█████╗░░░░██║░░░███████║█████╗░░█████╗░░░╚██╗████╗██╔╝██║░░██║██████╔╝█████═╝░
-#██╔══╝░░██║╚██╔╝██║░╚═══██╗░░░██║░░░██╔══██║██╔══╝░░██╔══╝░░░░████╔═████║░██║░░██║██╔══██╗██╔═██╗░
-#██║░░░░░██║░╚═╝░██║██████╔╝░░░██║░░░██║░░██║██║░░░░░██║░░░░░░░╚██╔╝░╚██╔╝░╚█████╔╝██║░░██║██║░╚██╗
-#╚═╝░░░░░╚═╝░░░░░╚═╝╚═════╝░░░░╚═╝░░░╚═╝░░╚═╝╚═╝░░░░░╚═╝░░░░░░░░╚═╝░░░╚═╝░░░╚════╝░╚═╝░░╚═╝╚═╝░░╚═╝
+#███████╗███╗░░░███╗░██████╗████████╗░█████╗░███████╗███████╗░██╗░░░░░░░██╗░█████╗░██████╗░██╗░░██╗███████╗██████╗░███████╗███████╗
+#██╔════╝████╗░████║██╔════╝╚══██╔══╝██╔══██╗██╔════╝██╔════╝░██║░░██╗░░██║██╔══██╗██╔══██╗██║░██╔╝██╔════╝██╔══██╗██╔════╝██╔════╝
+#█████╗░░██╔████╔██║╚█████╗░░░░██║░░░███████║█████╗░░█████╗░░░╚██╗████╗██╔╝██║░░██║██████╔╝█████═╝░█████╗░░██████╔╝█████╗░░█████╗░░
+#██╔══╝░░██║╚██╔╝██║░╚═══██╗░░░██║░░░██╔══██║██╔══╝░░██╔══╝░░░░████╔═████║░██║░░██║██╔══██╗██╔═██╗░██╔══╝░░██╔══██╗██╔══╝░░██╔══╝░░
+#██║░░░░░██║░╚═╝░██║██████╔╝░░░██║░░░██║░░██║██║░░░░░██║░░░░░░░╚██╔╝░╚██╔╝░╚█████╔╝██║░░██║██║░╚██╗██║░░░░░██║░░██║███████╗███████╗
+#╚═╝░░░░░╚═╝░░░░░╚═╝╚═════╝░░░░╚═╝░░░╚═╝░░╚═╝╚═╝░░░░░╚═╝░░░░░░░░╚═╝░░░╚═╝░░░╚════╝░╚═╝░░╚═╝╚═╝░░╚═╝╚═╝░░░░░╚═╝░░╚═╝╚══════╝╚══════╝
 # Связь с разработчиком:
 # VK - @feymer31
 # TG - @feymerwtf
@@ -51,6 +51,7 @@ messages:
   wasnot-working: "&fИгрок не работал!" # Сообщение, когда игрок не работал
   not-working: "&fВы не находитесь в режиме патруля!" # Сообщение, когда игрок не находится в режиме патруля
   already-working: "&fВы уже находитесь в режиме патруля!" # Сообщение, когда игрок уже находится в режиме патруля
+  data-null: "&fДанные не найдены!" # Сообщение, когда данные о работе не найдены
   entity-damage-disabled: "&fВы не можете наносить урон, когда находитесь в режиме патруля!" # Сообщение, когда игрок наносит урон по энтити, когда находится в режиме патруля
   block-place-disabled: "&fВы не можете ставить блоки, когда находитесь в режиме патруля!" # Сообщение, когда игрок ставит блок, когда находится в режиме патруля
   block-break-disabled: "&fВы не можете ломать блоки, когда находитесь в режиме патруля!" # Сообщение, когда игрок ломает блок, когда находится в режиме патруля
